--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
     width: 100vw;
     height: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -34,8 +34,39 @@ html, body {
     align-items: center;
     justify-content: center;
     color: white;
-
-    #next-shape-canvas {
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    background-color: rgb(0,0,0,0.5);
+    gap: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    
+    #next-shape-box {
         border: 2px solid white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .box{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            .row{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .col{
+                    aspect-ratio: 1;
+                }
+            }
+        }
+    }
+
+    .score-text {
+        font-size: 40px;
     }
 }
